--- a/css/styles.css
+++ b/css/styles.css
@@ -127,7 +127,7 @@ html{
 }
 .footer__container--icons{
     width: 100%;
-    height: 5rem;
+    height: 100%
     display: grid;
     background-color:#0E3DA4;
 }
